# casper-eth-bridge

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENCE.md  README.md  SECURITY.md
boosty-bridge/: .gitignore  INSTALL.md  Makefile  README.md  go.mod  go.sum  peer.go
boosty-bridge-services/: .gitignore  Makefile  README.md  go.mod  go.sum  peer.go
boosty-bridge-services/.github/: dependabot.yml
boosty-bridge-services/chains/: chain.go
boosty-bridge-services/communication/: communication.go
boosty-bridge-services/database/: db.go  private_keys.go
boosty-bridge-services/deploy/: casper.Dockerfile  docker-compose.yml  ethereum.Dockerfile  gateway.Dockerfile  polygon.Dockerfile  signer.Dockerfile  web_app.Dockerfile
boosty-bridge-services/gateway/: server.go
boosty-bridge-services/networks/: networks.go  networks_test.go
boosty-bridge-services/server/: server.go
boosty-bridge-services/signer/: service.go  signer.go  signer_test.go
boosty-bridge-services/transfers/: service.go  transfers.go
boosty-bridge-services/web_app/: server.go
boosty-bridge/bridge/: bridge.go  bridge_test.go  chore.go  eventsubscriber.go  service.go
boosty-bridge/chains/: chain.go  eventsubscriber.go
boosty-bridge/communication/: communication.go
boosty-bridge/currencyrates/: currencyrates.go  eventsubscriber.go  service.go
boosty-bridge/deploy/: avalanche.Dockerfile  bnb.Dockerfile  bridge.Dockerfile  bridge_core.Dockerfile  casper.Dockerfile  currencyrates.Dockerfile  docker-compose.yml  ethereum.Dockerfile  gateway.Dockerfile  polygon.Dockerfile  (+2 more)
boosty-bridge/poc/bridge-core/: Cargo.toml  bridge.toml
boosty-bridge/poc/bridge-core/src/: bridge.rs  consts.rs  crypto.rs  db.rs  error.rs  grpc.rs  lib.rs  math.rs  registry.rs  test.rs  time.rs  types.rs
boosty-bridge/poc/bridge-core/src/db/: rows.rs  schema.rs
boosty-bridge/poc/bridge-core/src/grpc/: connector.rs  server.rs  signer.rs
boosty-bridge/poc/bridge-core/src/sql/: count_transfers_by_sender.sql  create_tables.sql  select_transfers_by_sender_paged.sql  select_transfers_by_txhash.sql  transactions_in_waiting.sql
boosty-bridge/poc/bridge-core/src/test/: connector.rs  db.rs  transfers.rs
boosty-bridge/poc/price-oracle/: Cargo.toml  config.toml
boosty-bridge/poc/price-oracle/src/: error.rs  lib.rs  oracle.rs
boosty-communication/: Makefile  README.md  buf.gen.yaml  buf.yaml
(+367 files in other folders)
