[package]
name = "bridge-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.17.1"
reqwest = { version= "0.11", features = ["json", "stream", "trust-dns"] }
eventsource-stream = "0.2"
futures = "0.3"
tonic = "0.8"
prost = "0.11"
prost-types = "0.11"
pretty_env_logger = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tonic-codegen  = { package = "tonic-codegen", path = "../../../boosty-communication/rust-gen"}
sea-query = { version = "0.28.0", features = ["derive", "with-chrono", "backend-postgres", "thread-safe"] }
sea-query-binder = { version = "0.3", features = ["sqlx-postgres", "with-chrono"] }
sqlx = { version = "0.6.1", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
pg-embed = "0.6.5"

anyhow = "1.0"
arc-swap = "1.5.0"
async-trait = "0.1.56"
base16 = "0.2.1"
base64 = "0.13"
bincode = "1.3.3"
clap = { version = "3.1", features = ["derive"] }
dotenv = "0.15"
envy = "0.4"
once_cell = "1.11"
primitive-types = "0.11.1"
regex = "1.5"
serde = "1"
serde_json = "1"
slab = "0.4.7"
thiserror = "1.0"
toml = "0.5.9"
k256 = { version = "0.10", features = ["pem"] }
ed25519-dalek = "1.0.0" 
blake2 = "0.9"
chrono = "0.4.22"
parking_lot = "0.12.1"
strum = { version = "0.24", features = ["derive"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
fastrand = "1.8.0"
bs58 = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }


[profile.dev.package."*"]
debug = false
